--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="max-w-7xl mx-auto px-4 mt-12">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/foto/01.jpg" class="w-full h-64 object-cover" alt="Birthday Celebration">
+                        <img src="01.jpg" class="w-full h-64 object-cover" alt="Birthday Celebration">
                         <div class="p-6">
                             <p class="text-gray-600">Selamat ulang tahun, beyy! Hari-hari bersamamu
                                 terasa seperti mimpi baru saja mualai sudah berakhir.
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/foto/08.jpg" class="w-full h-64 object-cover" alt="Friends Celebration">
+                        <img src="/08.jpg" class="w-full h-64 object-cover" alt="Friends Celebration">
                         <div class="p-6">
                             <p class="text-gray-600">Sayang, di hari spesialmu ini, aku ingin kamu tahu betapa
                                 beruntungnya aku pernah memiliki km. Km adalah cahaya dalam hidupku,
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/foto/09.jpg" class="w-full h-64 object-cover" alt="Birthday Gifts">
+                        <img src="09.jpg" class="w-full h-64 object-cover" alt="Birthday Gifts">
                         <div class="p-6">
                             <p class="text-gray-600">Aku berharap hari ulang tahunmu
                                 kali ini menjadi hari yang paling berkesan.
