--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
                 <div class="glide__track" data-glide-el="track">
                     <ul class="glide__slides">
                         <li class="glide__slide">
-                            <img src="/foto/07.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 1" />
+                            <img src="07.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 1" />
                         </li>
                         <li class="glide__slide">
-                            <img src="/foto/03.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 2" />
+                            <img src="03.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 2" />
                         </li>
                         <li class="glide__slide">
                             <img src="/foto/04.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 3" />
                         </li>
                         <li class="glide__slide">
-                            <img src="/foto/05.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 4" />
+                            <img src="05.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 4" />
                         </li>
                         <li class="glide__slide">
-                            <img src="/foto/06.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 5" />
+                            <img src="06.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 5" />
                         </li>
                         <li class="glide__slide">
-                            <img src="/foto/12.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 5" />
+                            <img src="12.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 5" />
                         </li>
                     </ul>
                 </div>
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/08.jpg" class="w-full h-64 object-cover" alt="Friends Celebration">
+                        <img src="08.jpg" class="w-full h-64 object-cover" alt="Friends Celebration">
                         <div class="p-6">
                             <p class="text-gray-600">Sayang, di hari spesialmu ini, aku ingin kamu tahu betapa
                                 beruntungnya aku pernah memiliki km. Km adalah cahaya dalam hidupku,
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/foto/10.jpg" class="w-full h-64 object-cover" alt="Birthday Cupcakes">
+                        <img src="10.jpg" class="w-full h-64 object-cover" alt="Birthday Cupcakes">
                         <div class="p-6">
                             <p class="text-gray-600">ingat beyy aku selalu sayang dengan ikm,
                                 aku masih mengharapkan ikm, semoga kita bersam lagi ya...... aminin dong hehehehe
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/foto/11.jpg" class="w-full h-64 object-cover" alt="Birthday Decorations">
+                        <img src="11.jpg" class="w-full h-64 object-cover" alt="Birthday Decorations">
                         <div class="p-6">
                             <p class="text-gray-600">do'a gasan km semoga km panjang umur,
                                 sehat badan, lancar terus rezekinya,
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                        <img src="/foto/13.jpg" class="w-full h-64 object-cover" alt="Birthday Decorations">
+                        <img src="13.jpg" class="w-full h-64 object-cover" alt="Birthday Decorations">
                         <div class="p-6">
                             <p class="text-gray-600">Aku ingin mengucapkan terima
                                 kasih atas semua waktu yang kita habiskan bersama.
@@ -174,7 +174,7 @@
 
     </div>
     <audio id="bgMusic" loop="">
-        <source src="/foto/cinta.mp3" type="audio/mpeg" />
+        <source src="cinta.mp3" type="audio/mpeg" />
     </audio>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/glide.min.js"></script>
     <script>
