--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <img src="03.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 2" />
                         </li>
                         <li class="glide__slide">
-                            <img src="/foto/04.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 3" />
+                            <img src="04.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 3" />
                         </li>
                         <li class="glide__slide">
                             <img src="05.jpg" class="w-full h-[600px] object-cover" alt="Birthday Moment 4" />
